# voice-summarizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  jobs.py
backend/app/api/schemas/: __init__.py  jobs.py
backend/app/application/: __init__.py  orchestrator.py
backend/app/application/pipeline/: __init__.py  graph.py  nodes.py  state.py
backend/app/core/: __init__.py  config.py  container.py
backend/app/domain/: __init__.py  enums.py  models.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/audio/: __init__.py  processing.py
backend/app/infrastructure/jobs/: __init__.py  manager.py
backend/app/infrastructure/llm/: __init__.py  llama_summarizer.py
backend/app/infrastructure/speech/: __init__.py  coqui_voice_cloner.py  faster_whisper_transcriber.py
backend/app/infrastructure/storage/: __init__.py  file_store.py
backend/tests/unit/: test_audio_processing.py  test_domain_models.py  test_job_manager.py  test_settings.py
frontend/: .eslintrc.cjs  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.module.js
frontend/src/app/controllers/: main.controller.js
frontend/src/app/services/: api.service.js
frontend/src/styles/: main.css
infra/docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.frontend.conf
scripts/: bootstrap_ollama.sh
