[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-summarize-platform"
version = "0.1.0"
description = "Local, dockerized voice summarization and same-speaker voice synthesis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<0.1.0",
  "aiofiles>=24.1.0,<25.0.0",
  "langgraph>=0.2.39,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-core>=0.3.0,<1.0.0",
  "langchain-ollama>=0.2.0,<1.0.0",
]

[project.optional-dependencies]
speech = [
  "faster-whisper>=1.0.3,<2.0.0",
  "TTS>=0.22.0,<1.0.0; platform_system == 'Linux'",
  "pydub>=0.25.1,<1.0.0",
  "transformers==4.41.2",
]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "ruff>=0.6.0,<1.0.0",
  "types-aiofiles>=24.1.0.20240626",
  "pre-commit>=3.8.0,<4.0.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "backend"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
exclude = ["frontend", "scripts"]

[[tool.mypy.overrides]]
module = [
  "faster_whisper",
  "faster_whisper.*",
  "TTS",
  "TTS.*",
  "pydub",
  "pydub.*",
  "langgraph",
  "langgraph.*",
  "langchain_ollama",
  "langchain_ollama.*",
]
ignore_missing_imports = true
